--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,10 @@ main {
     font-weight: bold;
 }
 
+.card-title:hover {
+    color: var(--yellow);
+}
+
 .card-date {
     font-family: 'Figtree-VariableFont', sans-serif;
     color: var(--black);
@@ -82,6 +86,15 @@ main {
     color: var(--yellow);
     font-size: 1.3rem;
     font-weight: 400;
+}
+
+.card-title:hover,
+.card-title:hover ~ .card-description {
+    color: var(--black);
+}
+
+.card-title:hover {
+    color: var(--yellow);
 }
 
 .card-author {
